--- a/POO4_Kauãjotta_3info1.ipynb
+++ b/POO4_Kauãjotta_3info1.ipynb
@@ -27,6 +27,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2uSU4CQFChmR"
+      },
+      "source": [
+        "usamos o modificador de acesso private a fim de:\n",
+        "R = d) B e C estão corretas."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mitIzK0_vXZ0",
@@ -36,6 +46,7 @@
         "outputId": "74e1729e-53ea-4277-a0dd-df20f662361a"
       },
       "source": [
+        "\n",
         "class Usuario:\n",
         "  __primeiroNome = \"\"\n",
         "  def setNome(self, primeiroNome):\n",
@@ -47,7 +58,7 @@
         "usuario1.setNome(\"jotta\")\n",
         "print (usuario1.getNome())"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
